# rust-actix-web-author-book-management-system

./: .env  Cargo.toml
src/: config.rs  main.rs  main_for_mysql.rs
src/assets/: ProjectStructure.MD
src/models/: authors.rs  books.rs  db.rs
src/routes/: authors.rs  authors_routes.rs  books_routes.rs  mod.rs
