[package]
name = "rust-actix-web-author-book-management-system"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls"] } # Use the database you prefer
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
openssl = "0.10"